fix: more contrast to file explorer names

--- a/src/app/modules/core/dialogs/file-explorer/file-explorer.dialog.scss
+++ b/src/app/modules/core/dialogs/file-explorer/file-explorer.dialog.scss
@@ -29,7 +29,7 @@
 
 .folder-content-header-name {
     font-size: 0.9rem;
-    color: #757575;
+    color: var(--leaphy-text-color);
 }
 
 .folder-content-header-name:hover {
